# streamlit-ds-learn

./: LICENSE  README.MD  pyproject.toml  requirements.txt  resource.md
01_basic_streamlit/: 01_intro_app.py  02_text_input_and_output.py  03_media_display.py  04_layouts_sidebar.py  main.py
02_data_handling/: 01_upload_csv.py  02_filter_data.py  03_plot_data.py  main.py
03_visualization_with_streamlit/: 01_plotly_charts.py  02_seaborn_charts.py
04_data_analysis_project/eda-app/: main.py
04_data_analysis_project/pandas-profile/: main.py
